oauth2-proxy/templates/namespace.yml
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels: #@ labels()

#@overlay/match by=overlay.all, expects="1+"
---
#@overlay/match missing_ok=True
metadata:
  #@overlay/match missing_ok=True
  namespace: oauth2-proxy

#@overlay/match by=overlay.subset({"kind":"Namespace", "metadata":{"name":"oauth2-proxy"}}), expects=1
---
metadata:
  #@overlay/match missing_ok=True
  labels:
    #@overlay/match missing_ok=True
    namespace.kubernetes.io/name: oauth2-proxy
